--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "moment": "^2.26.0",
     "vue": "^2.6.11",
+    "vue-router": "^3.3.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
